--- a/blog-web/app/views/posts/_form.html.erb
+++ b/blog-web/app/views/posts/_form.html.erb
@@ -12,20 +12,20 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label "Titulo" %><br>
+    <%= f.text_field :title, class:"form-control" %>
   </div>
   <div class="field">
-    <%= f.label :subtitle %><br>
-    <%= f.text_field :subtitle %>
+    <%= f.label "Subtitulo" %><br>
+    <%= f.text_field :subtitle, class:"form-control" %>
   </div>
   <div class="field">
     <%= f.label :image_post %><br>
     <%= f.text_field :image_post %>
   </div>
   <div class="field">
-    <%= f.label :body_text %><br>
-    <%= f.text_area :body_text %>
+    <%= f.label "Texto" %><br>
+    <%= f.text_area :body_text, class:"form-control" %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
@@ -36,6 +36,6 @@
     <%= f.number_field :category_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Salvar", class:"btn btn-success btn btn-sm" %>
   </div>
 <% end %>
