--- a/blog-web/app/views/posts/index.html.erb
+++ b/blog-web/app/views/posts/index.html.erb
@@ -1,16 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<h1>Postagens</h1>
 
-<table>
+<%= link_to '+ postagem', new_post_path, class:"pull-right btn btn-info" %>
+
+<table class= "table">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Subtitle</th>
-      <th>Image post</th>
-      <th>Body text</th>
-      <th>User</th>
-      <th>Category</th>
+      <th>Título</th>
+      <th>Autor</th>
+      <th>Categoria</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,9 +18,6 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.subtitle %></td>
-        <td><%= post.image_post %></td>
-        <td><%= post.body_text %></td>
         <td><%= post.user_id %></td>
         <td><%= post.category_id %></td>
         <td><%= link_to 'Show', post %></td>
@@ -33,5 +29,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
