--- a/blog-web/app/views/categories/_form.html.erb
+++ b/blog-web/app/views/categories/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label "Nome da categoria" %><br>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
