--- a/blog-web/app/views/categories/index.html.erb
+++ b/blog-web/app/views/categories/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Categories</h1>
 
+<%= link_to 'Nova Categoria', new_category_path, class:"btn btn-info pull-right btn btn-ms" %>
+
 <table>
   <thead>
     <tr>
@@ -14,14 +16,12 @@
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Exibir', category %></td>
+        <td><%= link_to 'Editar', edit_category_path(category) %></td>
+        <td><%= link_to 'Deletar', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Category', new_category_path %>
