--- a/blog-web/app/views/posts/index.html.erb
+++ b/blog-web/app/views/posts/index.html.erb
@@ -18,8 +18,8 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.user_id %></td>
-        <td><%= post.category_id %></td>
+        <td><%= post.user.try(:name) %></td>
+        <td><%= post.category.try(:name) %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
